update user.routes
update swagger
